[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sspanel-vmess-single-port-backend"
version = "0.1.0"
description = "Database-backed SSPanel-Uim VMess single-port backend"
requires-python = ">=3.9"
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
sspanel-vmess-backend = "sspanel_vmess_backend.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sspanel_vmess_backend*"]
